# Siren

./: .gitmodules  CMakeLists.txt  README.md  Siren_RenderDocSettings.cap  imgui.ini
resources/ImageHandling/stb/: impl.cc
resources/SoftRast/: SoftRast.h
resources/debug/: debug.h
resources/engineCode/: Timer.h  config.json  engine.h  engineImguiUtils.cc  engineInit.cc  engineUtils.cc  includes.h  main.cc
resources/engineCode/shaders/: dummyDraw.cs.glsl
resources/engineCode/shaders/lib/: hg_sdf.glsl  shaderWrapper.h
resources/fonts/fontRenderer/: renderer.h
resources/noise/: perlin.h
scripts/: build.sh  cloneSubmoduleAdd.sh
src/ImGUI/: LanguageDefinitions.cc  TextEditor.cc  TextEditor.h
src/ImageHandling/: Image.h
src/ImageHandling/stb/: impl.cc
src/ImageHandling/tinyEXR/: tinyexr.h
src/SoftRast/: SoftRast.h
src/debug/: debug.h
src/engine/: config.json  engine.cc  engine.h  engineImguiUtils.cc  engineInit.cc  engineUtils.cc  includes.h
src/engine/shaders/: blit.fs.glsl  pathtrace.cs.glsl  postprocess.cs.glsl  temp.glsl  tonemap.cs.glsl
src/engine/shaders/lib/: BRDFUtils.glsl  depthCurves.glsl  shaderWrapper.h  tonemap.glsl
src/engineCode/: engineImguiUtils.cc  engineInit.cc  includes.h
src/engineCode/shaders/lib/: shaderWrapper.h  stb_include.h  tonemap.glsl  twigl.glsl
src/fonts/fontRenderer/: font.cs.glsl  renderer.h
src/noise/: perlin.cc
